--- a/Lecture 10/index.html
+++ b/Lecture 10/index.html
@@ -113,14 +113,16 @@
 
         <div id="twelfth" class="same">
             <h2>
-                Some Preload (preload="metadata"): The browser loads only the basic details (like length or size) but not the content on the html page.
+                Some Preload (preload="metadata"): The browser loads only the basic details (like length or size) but
+                not the content on the html page.
             </h2>
             <audio src="./Assests/audio.mp3" preload="metadata" controls></audio>
         </div>
 
         <div id="thirteenth" class="same">
             <h2>
-                Full Preload (preload="auto"): The browser loads the whole file, ready to play it immediately. on the html page.
+                Full Preload (preload="auto"): The browser loads the whole file, ready to play it immediately. on the
+                html page.
             </h2>
             <audio src="./Assests/audio.mp3" preload="auto" controls></audio>
         </div>
@@ -142,9 +144,12 @@
                 attribute like src,muted,poster,loop except autoplay.
             </h2>
             <h1>Note 3:</h1>
-            <h2>If you want to learn more about the media like preload attribute you can go to the documentation here: <a style="text-decoration: none; color: blue;" href="https://www.codewithharry.com/tutorial/html-audio-video-tags/" target="_blank">Media</a>
+            <h2>If you want to learn more about the media like preload attribute you can go to the documentation here:
+                <a style="text-decoration: none; color: blue;"
+                    href="https://www.codewithharry.com/tutorial/html-audio-video-tags/" target="_blank">Media</a>
             </h2>
         </div>
     </div>
 </body>
+
 </html>
