--- a/Lecture 10/svg.html
+++ b/Lecture 10/svg.html
@@ -15,7 +15,7 @@
         <img src="img.svg" alt="My Svg Image">
     </div>
     <div>
-        <iframe src="https://prashant-saini-22.vercel.app/" title="Prashant Portfolio" frameborder="0" width="500"
+        <iframe src="https://prashant-pi.vercel.app/" title="Prashant Portfolio" frameborder="0" width="500"
             height="500"></iframe> </iframe>
     </div>
 
