--- a/Lecture 16/index.html
+++ b/Lecture 16/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exrecise 1 - Solutio & Shoutouts</title>title>
+    <title>Exrecise 1 - Solution & Shoutouts</title>
 </head>
+
 <body>
+    <h1>Exercise 1 - Solution & Shoutouts</h1>
+    <p>In this exercise, we will be linking a CSS file to an HTML file correctly.</p>
+    <p>Make sure to use the correct path to your CSS file in the <code>&lt;link&gt;</code> tag.</p>
+    <p>Here is the correct way to link a CSS file:</p>
+    <pre><code>&lt;link rel="stylesheet" href="style.css"&gt;</code></pre>
+    <p>Make sure that the CSS file is in the same directory as your HTML file, or adjust the path accordingly.</p>
     <link rel="stylesheet" href="../Lecture 10/Quiz/index.html">
     <link rel="stylesheet" href="../Lecture 10/Quiz/style.css">
 </body>
+
 </html>
