--- a/Lecture 01/notes.html
+++ b/Lecture 01/notes.html
@@ -20,7 +20,7 @@
     <header class="site-header">
         <div class="container header-content">
             <h1>Sigma Web Development</h1>
-            <p class="subtitle">Code with Harry – Lecture 01 Notes &amp; Resources</p>
+            <p class="subtitle">CodeWithPrashant – Lecture 01 Notes &amp; Resources</p>
         </div>
     </header>
 
