--- a/Lecture 02/notes.html
+++ b/Lecture 02/notes.html
@@ -17,7 +17,7 @@
   <header class="site-header">
     <div class="container header-content">
       <h1>Sigma Web Development</h1>
-      <p class="subtitle">Code with Harry – Lecture 02 Notes &amp; Resources</p>
+      <p class="subtitle">CodeWithPrashant – Lecture 02 Notes &amp; Resources</p>
     </div>
   </header>
 
@@ -33,27 +33,32 @@
 
         <ul>
           <li><strong>Doctype:</strong> Start with <code>&lt;!DOCTYPE html&gt;</code> to declare HTML5.</li>
-          <li><strong>&lt;html&gt; tag:</strong> It wraps the full HTML document. Use <code>lang="en"</code> to set the language.</li>
+          <li><strong>&lt;html&gt; tag:</strong> It wraps the full HTML document. Use <code>lang="en"</code> to set the
+            language.</li>
           <li><strong>&lt;head&gt; section:</strong> Contains metadata like:
             <ul>
               <li><code>&lt;meta charset="UTF-8"&gt;</code> – supports Hindi and emojis.</li>
-              <li><code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code> – makes it responsive.</li>
+              <li><code>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</code> – makes it
+                responsive.</li>
               <li><code>&lt;title&gt;</code> – controls the browser tab name.</li>
               <li><code>&lt;link rel="stylesheet" href="style.css"&gt;</code> – links the CSS file.</li>
             </ul>
           </li>
           <li><strong>&lt;body&gt; tag:</strong> Holds the visible content like text or buttons.</li>
-          <li><strong>JavaScript:</strong> Use <code>&lt;script src="script.js"&gt;&lt;/script&gt;</code> to add a JavaScript file.</li>
+          <li><strong>JavaScript:</strong> Use <code>&lt;script src="script.js"&gt;&lt;/script&gt;</code> to add a
+            JavaScript file.</li>
           <li><strong>Content written:</strong> Inside body: "Hey this is my first website..." etc.</li>
         </ul>
 
         <!-- (Optional) Hinglish explanation -->
         <div class="note-hinglish">
           <p>
-            Hinglish: Is lecture mein humne apna pehla basic HTML page banaya. Starting hoti hai 
+            Hinglish: Is lecture mein humne apna pehla basic HTML page banaya. Starting hoti hai
             <code>&lt;!DOCTYPE html&gt;</code> se, jisse browser ko pata chalta hai ki HTML5 use kar rahe hain.
-            Head mein metadata hota hai jaise charset, viewport, title. CSS file <code>&lt;link&gt;</code> se jodte hain.
-            JavaScript ke liye <code>&lt;script&gt;</code> tag use hota hai. Body mein likha gaya text hi browser mein dikhai deta hai.
+            Head mein metadata hota hai jaise charset, viewport, title. CSS file <code>&lt;link&gt;</code> se jodte
+            hain.
+            JavaScript ke liye <code>&lt;script&gt;</code> tag use hota hai. Body mein likha gaya text hi browser mein
+            dikhai deta hai.
           </p>
         </div>
       </section>
