--- a/Lecture 03/notes.html
+++ b/Lecture 03/notes.html
@@ -17,7 +17,7 @@
   <header class="site-header">
     <div class="container header-content">
       <h1>Sigma Web Development</h1>
-      <p class="subtitle">Code with Harry – Lecture 03 Notes &amp; Resources</p>
+      <p class="subtitle">CodeWithPrashant – Lecture 03 Notes &amp; Resources</p>
     </div>
   </header>
 
@@ -33,7 +33,8 @@
 
         <ul>
           <li>
-            We again used the basic HTML structure with <code>&lt;!DOCTYPE html&gt;</code>, <code>&lt;html&gt;</code>, and
+            We again used the basic HTML structure with <code>&lt;!DOCTYPE html&gt;</code>, <code>&lt;html&gt;</code>,
+            and
             <code>&lt;head&gt;</code>.
           </li>
           <li>
@@ -65,7 +66,8 @@
           <p>
             Hinglish: Lecture 3 mein humne pehli baar <strong>CSS aur JS</strong> use kiya.
             CSS file se page ka background red aur text purple ho gaya.
-            JavaScript file <code>&lt;script&gt;</code> se link ki gayi, jisme ek simple <code>alert("Hello world!")</code> likha tha.
+            JavaScript file <code>&lt;script&gt;</code> se link ki gayi, jisme ek simple
+            <code>alert("Hello world!")</code> likha tha.
             Ye alert page load hone par popup karta hai.
           </p>
         </div>
