--- a/Lecture 21/notes.html
+++ b/Lecture 21/notes.html
@@ -228,7 +228,7 @@
                             <li>Element (<code>h1 { color: pink; }</code>, specificity 0,0,0,1)</li>
                         </ul>
                         The <code>h1</code> tag also has an inline style attribute:
-                        <pre><code><h1 style="color: aqua; background-color: blueviolet;">…</code></pre>
+                        <pre><code>…</code></pre>
                         Inline style has specificity (1,0,0,0), which outranks the ID selector (0,1,0,0). Therefore, the
                         heading appears aqua on blueviolet.
                     </li>
@@ -247,8 +247,8 @@
                         style="width: 100%; height: 300px; border: 1px solid #ddd; border-radius: 4px;"></iframe>
                     <p style="text-align: center; margin-top: 0.5rem;">
                         If the iframe doesn’t load, click
-                        <a href="./inlinestyle.html" target="_blank" rel="noopener noreferrer">here to open
-                            inline.html in a new tab</a>.
+                        <a href="./inlinestyle.html" target="_blank" rel="noopener noreferrer">here to open inline.html
+                            in a new tab</a>.
                     </p>
                 </section>
             </section>
@@ -295,7 +295,46 @@
             </section>
 
             <!-- ――――――――――――――――――――――――――――――――――――― -->
-            <!-- 8) BACK TO DASHBOARD LINK -->
+            <!-- 8) main.html (Combined Demo) -->
+            <!-- ――――――――――――――――――――――――――――――――――――― -->
+            <section class="note-section">
+                <h3 class="subheading">7. <code>main.html</code> (Combined Demo)</h3>
+                <ul>
+                    <li><strong>English Explanation:</strong>
+                        In <code>main.html</code>, all six demos (<code>element.html</code>,
+                        <code>classattribute.html</code>,
+                        <code>idselector.html</code>, <code>importance.html</code>, <code>inline.html</code>, and
+                        <code>universal.html</code>) are embedded together in a single page for side-by-side comparison.
+                        Each section demonstrates the specificity rules in one viewport, making it easy to observe how
+                        different rules interact simultaneously.
+                    </li>
+                </ul>
+                <div class="note-hinglish">
+                    <p>
+                        Hinglish: <code>main.html</code> mein humne sare demos ek saath combine kiye hain:
+                        <code>element.html</code>,
+                        <code>classattribute.html</code>, <code>idselector.html</code>, <code>importance.html</code>,
+                        <code>inline.html</code>, aur <code>universal.html</code>. Is se ek hi page mein sabhi
+                        specificity
+                        cases ek saath nazar aate hain, jisse aap dekh sakte hain kaise alag-alag selectors ek-dusre ko
+                        override
+                        karte hain.
+                    </p>
+                </div>
+                <section class="live-preview">
+                    <h4 class="subheading">💻 Live Preview: <code>main.html</code></h4>
+                    <iframe src="./main.html" title="Combined Specificity Demo"
+                        style="width: 100%; height: 600px; border: 1px solid #ddd; border-radius: 4px;"></iframe>
+                    <p style="text-align: center; margin-top: 0.5rem;">
+                        If the iframe doesn’t load, click
+                        <a href="./main.html" target="_blank" rel="noopener noreferrer">here to open main.html in a new
+                            tab</a>.
+                    </p>
+                </section>
+            </section>
+
+            <!-- ――――――――――――――――――――――――――――――――――――― -->
+            <!-- 9) BACK TO DASHBOARD LINK -->
             <!-- ――――――――――――――――――――――――――――――――――――― -->
             <p style="margin-top: 2rem;">
                 <a href="../index.html">← Back to Lecture Dashboard</a>
