--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <a href="Lecture 01/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 1</h2>
+                            <p class="lecture-topic">HTML Boilerplate</p>
                             <p class="lecture-title">Lecture 1 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -52,6 +53,7 @@
                     <a href="Lecture 02/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 2</h2>
+                            <p class="lecture-topic">Basic Web Page Setup</p>
                             <p class="lecture-title">Lecture 2 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -62,6 +64,7 @@
                     <a href="Lecture 03/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 3</h2>
+                            <p class="lecture-topic">Styling &amp; Script Alert</p>
                             <p class="lecture-title">Lecture 3 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -72,6 +75,7 @@
                     <a href="Lecture 04/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 4</h2>
+                            <p class="lecture-topic">Headings, Links &amp; CSS</p>
                             <p class="lecture-title">Lecture 4 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -82,6 +86,7 @@
                     <a href="Lecture 05/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 5</h2>
+                            <p class="lecture-topic">Images, Tables &amp; Lists</p>
                             <p class="lecture-title">Lecture 5 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -92,6 +97,7 @@
                     <a href="Lecture 06/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 6</h2>
+                            <p class="lecture-topic">Meta Tags, Title &amp; Linking</p>
                             <p class="lecture-title">Lecture 6 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -102,6 +108,7 @@
                     <a href="Lecture 07/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 7</h2>
+                            <p class="lecture-topic">HTML Forms</p>
                             <p class="lecture-title">Lecture 7 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -112,6 +119,7 @@
                     <a href="Lecture 08/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 8</h2>
+                            <p class="lecture-topic">Block vs Inline &amp; Form Quiz</p>
                             <p class="lecture-title">Lecture 8 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -122,6 +130,7 @@
                     <a href="Lecture 09/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 9</h2>
+                            <p class="lecture-topic">ID vs Class &amp; CSS Selectors</p>
                             <p class="lecture-title">Lecture 9 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -132,6 +141,7 @@
                     <a href="Lecture 10/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 10</h2>
+                            <p class="lecture-topic">Video, Audio &amp; SVG/Media Demo</p>
                             <p class="lecture-title">Lecture 10 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -142,6 +152,7 @@
                     <a href="Lecture 11/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 11</h2>
+                            <p class="lecture-topic">Semantic Tags in HTML</p>
                             <p class="lecture-title">Lecture 11 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -152,6 +163,7 @@
                     <a href="Lecture 12/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 12</h2>
+                            <p class="lecture-topic">Pure HTML Media Player</p>
                             <p class="lecture-title">Lecture 12 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -162,6 +174,7 @@
                     <a href="Lecture 13/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 13</h2>
+                            <p class="lecture-topic">Entities, Code, Pre, Canvas &amp; Quotations</p>
                             <p class="lecture-title">Lecture 13 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -172,6 +185,7 @@
                     <a href="Lecture 14/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 14</h2>
+                            <p class="lecture-topic">Introduction to CSS</p>
                             <p class="lecture-title">Lecture 14 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -182,6 +196,7 @@
                     <a href="Lecture 15/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 15</h2>
+                            <p class="lecture-topic">Inline, Internal &amp; External CSS</p>
                             <p class="lecture-title">Lecture 15 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -192,6 +207,7 @@
                     <a href="Lecture 16/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 16</h2>
+                            <p class="lecture-topic">Basic HTML Structure &amp; Linking CSS</p>
                             <p class="lecture-title">Lecture 16 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -202,6 +218,7 @@
                     <a href="Lecture 17/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 17</h2>
+                            <p class="lecture-topic">CSS Selectors Deep Dive</p>
                             <p class="lecture-title">Lecture 17 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -212,6 +229,7 @@
                     <a href="Lecture 18/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 18</h2>
+                            <p class="lecture-topic">CSS Box Model</p>
                             <p class="lecture-title">Lecture 18 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -222,6 +240,7 @@
                     <a href="Lecture 19/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 19</h2>
+                            <p class="lecture-topic">CSS Colors &amp; Fonts/Text Properties</p>
                             <p class="lecture-title">Lecture 19 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -232,6 +251,7 @@
                     <a href="Lecture 20/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 20</h2>
+                            <p class="lecture-topic">CSS Challenge: Styling Specific Paragraphs</p>
                             <p class="lecture-title">Lecture 20 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -242,6 +262,7 @@
                     <a href="Lecture 21/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 21</h2>
+                            <p class="lecture-topic">CSS Specificity Deep Dive</p>
                             <p class="lecture-title">Lecture 21 Notes &amp; Code</p>
                         </div>
                     </a>
@@ -252,11 +273,13 @@
                     <a href="Lecture 22/notes.html" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h2>Lecture 22</h2>
+                            <p class="lecture-topic">CSS Sizing Units (px, rem, em, vh, vw, %, vmin)</p>
                             <p class="lecture-title">Lecture 22 Notes &amp; Code</p>
                         </div>
                     </a>
                 </div>
             </section>
+
         </div>
     </main>
 
